--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Documento de Prueba</title>
 </head>
-<body>
-    
+<body class="fondo">
+    <div class="dock-wrapper">
+        <ul class="dock" >
+            <li>
+                <img src="./assets/img/image1.png" alt="demo img">
+            </li>
+            <li>
+                <img src="./assets/img/image2.png" alt="demo img">
+            </li> 
+        </ul>
+    </div>
 </body>
 </html>
