Lista de imagenes

--- a/SidewaySelection/index.html
+++ b/SidewaySelection/index.html
@@ -15,6 +15,18 @@
             <li>
                 <img src="./assets/img/image2.png" alt="demo img">
             </li> 
+            <li>
+                <img src="./assets/img/image3.png" alt="demo img">
+            </li>
+            <li>
+                <img src="./assets/img/image4.png" alt="demo img">
+            </li>
+            <li>
+                <img src="./assets/img/image5.png" alt="demo img">
+            </li> 
+            <li>
+                <img src="./assets/img/image6.png" alt="demo img">
+            </li> 
         </ul>
     </div>
 </body> 
