--- a/SidewaySelection/index.html
+++ b/SidewaySelection/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Documento de Prueba</title>
 </head>
-<body class="fondo">
+<body class="background">
     <div class="dock-wrapper">
         <ul class="dock" >
             <li>
